--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "Astrofolio",
+  "name": "astrofolio",
   "type": "module",
-  "version": "0.0.1",
+  "version": "2.0.0",
   "scripts": {
     "dev": "bunx --bun astro dev",
     "start": "bunx --bun astro dev",
@@ -10,29 +10,29 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astro-community/astro-embed-youtube": "^0.5.5",
-    "@astrojs/mdx": "^3.1.8",
-    "@astrojs/react": "^3.6.2",
-    "@astrojs/rss": "^4.0.9",
-    "@astrojs/sitemap": "^3.2.1",
-    "@astrojs/tailwind": "^5.1.2",
-    "@astrojs/vercel": "^7.8.2",
-    "@fontsource/geist-mono": "^5.1.0",
-    "@fontsource/geist-sans": "^5.1.0",
-    "@fontsource/roboto": "^5.1.0",
-    "@types/react": "^18.3.12",
-    "@types/react-dom": "^18.3.1",
-    "astro": "^4.16.7",
-    "astro-icon": "^1.1.1",
-    "astro-opengraph-images": "^1.11.6",
+    "@astro-community/astro-embed-youtube": "^0.5.6",
+    "@astrojs/mdx": "4.2.5",
+    "@astrojs/react": "4.2.5",
+    "@astrojs/rss": "4.0.11",
+    "@astrojs/sitemap": "3.3.1",
+    "@astrojs/vercel": "8.1.4",
+    "@fontsource/geist-mono": "^5.2.5",
+    "@fontsource/geist-sans": "^5.2.5",
+    "@fontsource/roboto": "^5.2.5",
+    "@tailwindcss/vite": "^4.1.4",
+    "@types/react": "^19.1.2",
+    "@types/react-dom": "^19.1.2",
+    "astro": "5.7.6",
+    "astro-icon": "^1.1.5",
+    "astro-opengraph-images": "^1.12.3",
     "astro-seo": "^0.8.4",
-    "astro-themes": "^0.2.5",
+    "astro-themes": "^0.2.6",
     "astro-tweet": "^0.0.4",
-    "katex": "^0.16.11",
-    "lenis": "^1.1.14",
+    "katex": "^0.16.22",
+    "lenis": "^1.3.1",
     "mdx": "^0.3.1",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "react-wrap-balancer": "^1.1.1",
     "rehype-autolink-headings": "^7.1.0",
     "rehype-katex": "^7.0.1",
@@ -41,13 +41,12 @@
     "tw-to-css": "^0.0.12"
   },
   "devDependencies": {
-    "@iconify-json/fa6-brands": "^1.2.1",
-    "@iconify-json/fa6-solid": "^1.2.1",
-    "@iconify-json/tabler": "^1.2.6",
-    "@tailwindcss/typography": "^0.5.15",
-    "autoprefixer": "^10.4.20",
-    "postcss": "^8.4.47",
-    "tailwindcss": "^3.4.14"
+    "@iconify-json/fa6-brands": "^1.2.5",
+    "@iconify-json/fa6-solid": "^1.2.3",
+    "@iconify-json/tabler": "^1.2.17",
+    "@tailwindcss/typography": "^0.5.16",
+    "autoprefixer": "^10.4.21",
+    "tailwindcss": "^4.1.4"
   },
   "patchedDependencies": {
     "astro-opengraph-images@1.11.6": "patches/astro-opengraph-images@1.11.6.patch"
